<resources>
    <string name="app_name">SqLiteAndroid</string>
    <string name="input_details">Input Details</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="add_data">Add Data</string>
    <string name="show_data">Show Data</string>
    <string name="update_data">Update Data</string>
    <string name="id">id</string>
    <string name="update">Update</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete">Delete</string>
</resources>