<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/input_details"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="text"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Add_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edGender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Add_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/show_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_dataBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/update_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_dataBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="220dp"
        android:minHeight="48dp"
        android:text="@string/delete_data"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>