<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edName"
        android:layout_below="@+id/edID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="text"
        android:minHeight="48dp" />


</RelativeLayout>